--- a/index.html
+++ b/index.html
@@ -36,38 +36,48 @@
             <h2>Последние новости</h2>
             <div class="news-list">
                 <div class="news-item">
-                    <img src="images/news1.jpg" alt="Новость 1">
+                    <div class="news-img-container">
+                        <img src="n1.jpg" alt="Новость 1">
+                    </div>
                     <div class="news-content">
-                        <h3>Новость 1</h3>
-                        <p>Описание новости 1 из автомобильного мира. Краткий обзор последних событий.</p>
+                        <h3>Москвич 8</h3>
+                        <p>Каким будет «Москвич 8»: что известно о новом кроссовере.</p>
                     </div>
                 </div>
                 <div class="news-item">
-                    <img src="images/news2.jpg" alt="Новость 2">
+                    <div class="news-img-container">
+                        <img src="n2.jpg" alt="Новость 2">
+                    </div>
                     <div class="news-content">
-                        <h3>Новость 2</h3>
-                        <p>Описание новости 2 из автомобильного мира. Информация о новых технологиях и разработках.</p>
+                        <h3>Статьи</h3>
+                        <p>Тоже не дороже 1,2 миллиона: 9 иномарок по цене Lada Iskra</p>
                     </div>
                 </div>
                 <div class="news-item">
-                    <img src="images/news3.jpg" alt="Новость 3">
+                    <div class="news-img-container">
+                        <img src="n3.jpg" alt="Новость 3">
+                    </div>
                     <div class="news-content">
-                        <h3>Новость 3</h3>
-                        <p>Описание новости 3 из автомобильного мира. Интервью с ведущими специалистами.</p>
+                        <h3>Парралельный импорт</h3>
+                        <p>В Россию завезли новые Mercedes и Škoda. Что будет с ценами после санкций</p>
                     </div>
                 </div>
                 <div class="news-item">
-                    <img src="images/news4.jpg" alt="Новость 4">
+                    <div class="news-img-container">
+                        <img src="n4.jpg" alt="Новость 4">
+                    </div>
                     <div class="news-content">
-                        <h3>Новость 4</h3>
-                        <p>Описание новости 4 из автомобильного мира. Обзор новых моделей автомобилей.</p>
+                        <h3>Закон и ПДД</h3>
+                        <p>Правила регистрации автомобилей в ГИБДД опять изменят. Что важно знать</p>
                     </div>
                 </div>
                 <div class="news-item">
-                    <img src="images/news5.jpg" alt="Новость 5">
+                    <div class="news-img-container">
+                        <img src="n5.jpg" alt="Новость 5">
+                    </div>
                     <div class="news-content">
-                        <h3>Новость 5</h3>
-                        <p>Описание новости 5 из автомобильного мира. Результаты последних гонок.</p>
+                        <h3>Санкции</h3>
+                        <p>Против Мосбиржи ввели санкции. Что будет с ценами на машины и запчасти</p>
                     </div>
                 </div>
             </div>
