--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Интернет-магазин автомобильных запчастей</title>
+    <title>Автозапчасти</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="logo">
-                <h1>АвтоЗапчасти.kz</h1>
+                <h1>АвтоЗапчасти.kg</h1>
             </div>
             <nav>
                 <ul>
@@ -26,7 +26,7 @@
 
     <section id="home" class="home-section">
         <div class="container">
-            <h2>Добро пожаловать в АвтоЗапчасти.kz</h2>
+            <h2>Добро пожаловать в АвтоЗапчасти.kg</h2>
             <p>Мы предлагаем широкий ассортимент автомобильных запчастей от ведущих производителей.</p>
         </div>
     </section>
@@ -158,7 +158,7 @@
     <section id="contact" class="contact-section">
         <div class="container">
             <h2>Контакты</h2>
-            <p>Вы можете связаться с нами по телефону +996-555-77-77-77 или отправить письмо на email: info@autozapchasti.kz</p>
+            <p>Вы можете связаться с нами по телефону +996-555-77-77-77 или отправить письмо на email: info@autozapchasti.kg</p>
             <form action="send_form.php" method="POST">
                 <label for="name">Имя:</label>
                 <input type="text" id="name" name="name" required>
@@ -176,7 +176,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 АвтоЗапчасти.kz. Все права защищены.</p>
+            <p>&copy; 2024 АвтоЗапчасти.kg Все права защищены.</p>
         </div>
     </footer>
 
